@@ -30,8 +30,8 @@ Kernel configured for up to 4 processors.
 Processor type: i486 (Intel 80486)
 Processors active: 0 1 2 3
 Primary memory available: 8.00 gigabytes
-Default processor set: 178 tasks, 904 threads, 4 processors
-Load average: 4.52, Mach factor: 1.08
+Default processor set: 175 tasks, 858 threads, 4 processors
+Load average: 0.94, Mach factor: 3.05
 /bin/machine           = unknown
 /usr/bin/oslevel       = unknown
 /bin/universe          = unknown
@@ -101,7 +101,7 @@ ac_cv_env_target_alias_value=
 ## Output variables. ##
 ## ----------------- ##
 
-DATE='Sun Dec 25 06:49:04 PST 2011'
+DATE='Sun Dec 25 09:51:40 PST 2011'
 DEFS='-DPACKAGE_NAME=\"\" -DPACKAGE_TARNAME=\"\" -DPACKAGE_VERSION=\"\" -DPACKAGE_STRING=\"\" -DPACKAGE_BUGREPORT=\"\"'
 ECHO_C=''
 ECHO_N='-n'
