@@ -503,7 +503,7 @@ s,@LIBS@,|#_!!_#|,g
 s,@build_alias@,|#_!!_#|,g
 s,@host_alias@,|#_!!_#|,g
 s,@target_alias@,|#_!!_#|,g
-s,@DATE@,|#_!!_#|Sun Dec 25 06:49:04 PST 2011,g
+s,@DATE@,|#_!!_#|Sun Dec 25 09:51:40 PST 2011,g
 s,@TAR_FILE@,|#_!!_#|XML_3.6-2.tar.gz,g
 s,@ZIP_FILE@,|#_!!_#|XML_3.6-2.zip,g
 s,@MINOR_VERSION@,|#_!!_#|6,g
