@@ -5,7 +5,7 @@
 <body>
 <h1>An XML package for the S language</h1>
 <p align="right">Last Release:
-  3.6-2 (<font color="red">Sun Dec 25 06:49:04 PST 2011</font>)</p>
+  3.6-2 (<font color="red">Sun Dec 25 09:51:40 PST 2011</font>)</p>
 
 <div style="border: red 1px solid; padding: 10pt">
 <p>
@@ -133,10 +133,11 @@ o = readKeyValueDB("http://www.omegahat.org/RSXML/plist.xml")
 <lst name="info">
       <str name="ABC">A string</str>
       <int name="xyz">103</int>
-      <long name="big">1000012310303</int>
+      <long name="big">1000012310303</long>
       <bool>true</bool>
       <date name="lastModified">2011-02-10T11:29:03Z</date>
-]]></pre>      
+</lst>]]>
+</pre>      
   <dd> <a href="solrDocs.R">solrDocs.R</a>
       <br/>
 <pre class="rcode">
@@ -152,6 +153,6 @@ o = readSolrDoc("http://www.omegahat.org/RSXML/solr.xml")
 <address><a href="http://www.stat.ucdavis.edu/~duncan">Duncan Temple Lang</a>
 <a href="mailto:duncan@wald.ucdavis.edu">&lt;duncan@wald.ucdavis.edu&gt;</a></address>
 <!-- hhmts start -->
-Last modified: Sun Dec 25 06:48:59 PST 2011
+Last modified: Sun Dec 25 09:51:31 PST 2011
 <!-- hhmts end -->
 </body> </html>
